--- a/index.html
+++ b/index.html
@@ -7,18 +7,37 @@
     <title>Calculadora</title>
   </head>
   <body>
-    <div id="calculator" class="calculator">
-      <button id="number" class="numbers">9</button>
-      <button id="number" class="numbers">8</button>
-      <button id="number" class="numbers">7</button>
-      <button id="number" class="numbers">6</button>
-      <button id="number" class="numbers">5</button>
-      <button id="number" class="numbers">4</button>
-      <button id="number" class="numbers">3</button>
-      <button id="number" class="numbers">2</button>
-      <button id="number" class="numbers">1</button>
-      <button id="number" class="numbers">0</button>
-      <button id="equals" class="equals">=</button>
+    <div class="container">
+      <div class="body-calc">
+        <div class="calc-screen">
+          <div class="op-screen">5+5+5+5+</div>
+          <div class="type-screen">20</div>
+        </div>
+        <div class="button-row">
+          <div class="button">7</div>
+          <div class="button">8</div>
+          <div class="button">9</div>
+          <div class="button">×</div>
+        </div>
+        <div class="button-row">
+          <div class="button">4</div>
+          <div class="button">5</div>
+          <div class="button">6</div>
+          <div class="button">÷</div>
+        </div>
+        <div class="button-row">
+          <div class="button">1</div>
+          <div class="button">2</div>
+          <div class="button">3</div>
+          <div class="button">+</div>
+        </div>
+        <div class="button-row">
+          <div class="button">=</div>
+          <div class="button">0</div>
+          <div class="button">,</div>
+          <div class="button">-</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
