--- a/index.html
+++ b/index.html
@@ -11,33 +11,37 @@
       <div class="body-calc">
         <div class="calc-screen">
           <div class="op-screen">5+5+5+5+</div>
-          <div class="type-screen">20</div>
+          <input type="text" class="type-screen"></input>
         </div>
         <div class="button-row">
-          <div class="button">7</div>
-          <div class="button">8</div>
-          <div class="button">9</div>
-          <div class="button">×</div>
+          <button onclick="addNumber()" id="number-button" class="button">7</button>
+          <button onclick="addNumber()" id="number-button" class="button">8</button>
+          <button onclick="addNumber()" id="number-button" class="button">9</button>
+          <button onclick="addNumber()" id="number-button" class="button">×</button>
         </div>
         <div class="button-row">
-          <div class="button">4</div>
-          <div class="button">5</div>
-          <div class="button">6</div>
-          <div class="button">÷</div>
+          <button onclick="addNumber()" id="number-button" class="button">4</button>
+          <button onclick="addNumber()" id="number-button" class="button">5</button>
+          <button onclick="addNumber()" id="number-button" class="button">6</button>
+          <button onclick="addNumber()" id="number-button" class="button">÷</button>
         </div>
         <div class="button-row">
-          <div class="button">1</div>
-          <div class="button">2</div>
-          <div class="button">3</div>
-          <div class="button">+</div>
+          <button onclick="addNumber()" id="number-button" class="button">1</button>
+          <button onclick="addNumber()" id="number-button" class="button">2</button>
+          <button onclick="addNumber()" id="number-button" class="button">3</button>
+          <button onclick="addNumber()" id="number-button" class="button">+</button>
         </div>
         <div class="button-row">
-          <div class="button">=</div>
-          <div class="button">0</div>
-          <div class="button">,</div>
-          <div class="button">-</div>
+          <button onclick="addNumber()" id="number-button" class="button">=</button>
+          <button onclick="addNumber()" id="number-button" class="button">0</button>
+          <button onclick="addNumber()" id="number-button" class="button">,</button>
+          <button onclick="addNumber()" id="number-button" class="button">-</button>
         </div>
       </div>
     </div>
+
+    <script src="src/js/app.js"></script>
+
+
   </body>
 </html>
