--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="body-calc">
         <div class="calc-screen">
           <div class="op-screen">5+5+5+5+</div>
-          <input type="text" class="type-screen"></input>
+          <input type="text" class="type-screen">aa</input>
         </div>
         <div class="button-row">
           <button onclick="addNumber()" id="number-button" class="button">7</button>
