--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
           <div class="op-screen">5+5+5+5+</div>
           <input type="text" class="type-screen">aa</input>
         </div>
+        <div class="button-row-2">
+          <button class="button clear" id="clear">C</button>
+          <button class="button clear-entry" id="clear-entry">CE</button>
+          <button class="button backspace" id="backspace">⌦</button>
+        </div>
         <div class="button-row">
           <button onclick="addNumber()" id="number-button" class="button">7</button>
           <button onclick="addNumber()" id="number-button" class="button">8</button>
