--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="container">
       <div class="body-calc">
         <div class="calc-screen">
-          <div class="op-screen">5+5+5+5+</div>
-          <input type="text" class="type-screen">aa</input>
+          <div class="op-screen">a</div>
+          <input type="text" class="type-screen"></input>
         </div>
-        <div class="button-row-2">
-          <button class="button clear" id="clear">C</button>
-          <button class="button clear-entry" id="clear-entry">CE</button>
-          <button class="button backspace" id="backspace">⌦</button>
+        <div class="button-row-top">
+          <button class="button-top" id="clear">C</button>
+          <button class="button-top" id="clear-entry">CE</button>
+          <button class="button-top" id="backspace">⌫</button>
         </div>
         <div class="button-row">
           <button onclick="addNumber()" id="number-button" class="button">7</button>
