Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="body-calc">
         <div class="calc-screen">
-          <div class="op-screen">a</div>
+          <div class="op-screen"></div>
           <input type="text" class="type-screen"></input>
         </div>
         <div class="button-row-top">
